Add Day 7 Part 1

--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -22,4 +22,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Day7\" />
+    <Folder Include="Day7\Intcode\" />
+  </ItemGroup>
 </Project>
