--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -45,6 +45,9 @@
     <None Update="Day15\RepairDroid.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day16\Signal.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Day1\ModuleMasses.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
