Add Day 14 Part 1

--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -69,10 +69,14 @@
     <None Update="Day11\RobotController.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day14\Reactions.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Day07\" />
     <Folder Include="Day07\Intcode\" />
     <Folder Include="Day08\" />
+    <Folder Include="Day14\" />
   </ItemGroup>
 </Project>
